--- a/style/style_admin.css
+++ b/style/style_admin.css
@@ -18,6 +18,26 @@
         border-radius: 0px;
     }
 
+    .header-center input[type=text]:focus{
+        border-color: #74b9ff;
+    }
+
+    .header-center button{
+        margin: 10px 0px 10px 10px;
+        background: #74b9ff;
+        border: none;
+        color: white;
+        height: 45px;
+        font-size: 1.1rem;
+        border-radius: 0px;
+    }
+
+    .header-center button:hover{
+        cursor: pointer;
+        color: white;
+        background: #0984e3;
+    }
+
     .header-right a{
         color: rgba(0, 0, 0, 0.7);
     }
@@ -29,6 +49,7 @@
     .wrapper{
         width: 100%;
         min-height: 1000px;
+        padding: 80px 50px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -41,6 +62,7 @@
         border: 2px solid #e7e7e7;
         box-shadow: 0 0 5px rgba(0, 0, 0, .3);
         padding: 30px 30px;
+        margin: 30px 0px 20px 0px;
     }
 
     footer{
@@ -64,7 +86,8 @@
 
     .title{
         display: flex;
-        margin-bottom: 10px;
+        margin-top: 15px;
+        margin-bottom: 0px;
     }
 
     .title p{
