--- a/style/style_register_b.css
+++ b/style/style_register_b.css
@@ -129,6 +129,23 @@
         transition: .3s;
     }
 
+    .top-wrapper .input-group select{
+        width: 100%;
+        height: 100%;
+        border: 2px solid #e7e7e7;
+        padding: 0px 15px;
+        font-size: 1rem;
+        border-radius: 30px;
+        background: transparent;
+        outline: none;
+        transition: .3s;
+        text-decoration: none;
+    }
+
+    .top-wrapper .input-group select:focus{
+        border-color: #74b9ff;
+    }
+
     .top-wrapper .input-group input:focus{
         border-color: #74b9ff;
     }
