--- a/style/style_update.css
+++ b/style/style_update.css
@@ -40,6 +40,7 @@
     .wrapper{
         width: 100%;
         min-height: 1000px;
+        padding: 80px 50px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -52,6 +53,7 @@
         border: 2px solid #e7e7e7;
         box-shadow: 0 0 5px rgba(0, 0, 0, .3);
         padding: 30px 30px;
+        margin: 30px 0px 20px 0px;
     }
 
     .form-wrapper .input-group{
