--- a/style/style_usprofile.css
+++ b/style/style_usprofile.css
@@ -7,6 +7,17 @@
     font-family: 'Poppins', sans-serif;
 }
 
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        /* display: none; <- Crashes Chrome on hover */
+        -webkit-appearance: none;
+        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    }
+
+    input[type=number] {
+        -moz-appearance:textfield; /* Firefox */
+    }
+
     .header-center input[type=text]{
         border: 2px solid #e7e7e7;
         margin: 10px 0px 10px 10px;
@@ -32,12 +43,6 @@
         border-radius: 0px;
     }
 
-    .header-center button:hover{
-        cursor: pointer;
-        color: white;
-        background: #0984e3;
-    }
-
     .header-right a{
         color: rgba(0, 0, 0, 0.7);
     }
@@ -46,40 +51,57 @@
         color: rgba(0,0,0);
     }
 
-    .top-wrapper{
+    .wrapper{
         width: 100%;
-        margin: 30px 0px 20px 0px;
+        min-height: 1000px;
+        padding: 80px 50px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .wrapper{
+    .top-wrapper{
         width: 100%;
-        padding: 80px 50px;
-    }
-
-    .catalog-wrapper{
-        width: 100%;
+        min-height: 800px;
         border: 2px solid #e7e7e7;
         padding: 30px 30px;
+        margin: 30px 0px 20px 0px;
     }
 
-    .catalog{
-        height: 350px;
+    .form-wrapper .input-group{
+        width: 50%;
+        height: 50px;
+        margin-bottom: 25px;
     }
 
-    .catalog-title{
-        color: black;
-    }
-
-    .catalog img{
-        height: 150px;
+    .form-wrapper .input-group select{
         width: 100%;
+        height: 100%;
+        border: 2px solid #e7e7e7;
+        padding: 0px 15px;
+        font-size: 1rem;
+        background: transparent;
+        outline: none;
+        transition: .3s;
     }
 
-    .catalog a{
-        display: inline-block;
+    .form-wrapper .input-group input{
+        width: 100%;
+        height: 100%;
+        border: 2px solid #e7e7e7;
+        padding: 15px 20px;
+        font-size: 1rem;
+        background: transparent;
+        outline: none;
+        transition: .3s;
+    }
+
+    .form-wrapper .input-group select:focus{
+        border-color: #74b9ff;
+    }
+
+    .form-wrapper .input-group input:focus{
+        border-color: #74b9ff;
     }
 
     footer{
