Pembuatan detail page

--- a/style/style_admin.css
+++ b/style/style_admin.css
@@ -7,6 +7,48 @@
     font-family: 'Poppins', sans-serif;
 }
 
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        /* display: none; <- Crashes Chrome on hover */
+        -webkit-appearance: none;
+        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    }
+
+    input[type=number] {
+        -moz-appearance:textfield; /* Firefox */
+    }
+
+    .header-center input[type=text]{
+        border: 2px solid #e7e7e7;
+        margin: 10px 0px 10px 10px;
+        padding: 10px 10px;
+        font-size: 15px;
+        outline: none;
+        box-shadow: none;
+        transition: .3s;
+        border-radius: 0px;
+    }
+
+    .header-center input[type=text]:focus{
+        border-color: #74b9ff;
+    }
+
+    .header-center button{
+        margin: 10px 0px 10px 10px;
+        background: #74b9ff;
+        border: none;
+        color: white;
+        height: 45px;
+        font-size: 1.1rem;
+        border-radius: 0px;
+    }
+
+    .header-center button:hover{
+        cursor: pointer;
+        color: white;
+        background: #0984e3;
+    }
+
     .header-right a{
         color: rgba(0, 0, 0, 0.7);
     }
