--- a/style/style_usprofile.css
+++ b/style/style_usprofile.css
@@ -43,6 +43,12 @@
         border-radius: 0px;
     }
 
+    .header-center button:hover{
+        cursor: pointer;
+        color: white;
+        background: #0984e3;
+    }
+
     .header-right a{
         color: rgba(0, 0, 0, 0.7);
     }
