--- a/style/style_login.css
+++ b/style/style_login.css
@@ -7,6 +7,17 @@
     font-family: 'Poppins', sans-serif;
 }
 
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        /* display: none; <- Crashes Chrome on hover */
+        -webkit-appearance: none;
+        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    }
+
+    input[type=number] {
+        -moz-appearance:textfield; /* Firefox */
+    }
+
     .header-center input[type=text]{
         border: 2px solid #e7e7e7;
         margin: 10px 0px 10px 10px;
@@ -49,7 +60,7 @@
     .wrapper{
         width: 100%;
         min-height: 800px;
-        background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(wallpaper.jpg);
+        background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/wallpaper.jpg);
         background-position: center;
         background-size: cover;
         display: flex;
@@ -138,6 +149,45 @@
         color: #0984e3;
         font-weight: 500;
         text-decoration: none;
+    }
+
+    footer{
+        width: 100%;
+        background: rgba(255, 255, 255, 0.95);
+        border-top: 2px solid #e7e7e7;
+    }
+
+    .footer-left{
+        float: left;
+        height: 100%;
+        padding: 30px 0px 30px 50px;
+        font-size: 0.75rem;
+    }
+
+    .footer-right{
+        padding: 20px 50px 0px 0px;
+        height: 100%;
+        float: right;
+    }
+
+    .title{
+        display: flex;
+        margin-top: 15px;
+        margin-bottom: 0px;
+    }
+
+    .title p{
+        line-height: 30px;
+        font-weight: 1000;
+        margin-right: 10px;
+    }
+
+    .title img{
+        height: 30px;
+    }
+
+    .logos{
+        height: 70px;
     }
 
 @media (max-width: 430px){
